common libraries code cleanup - replace deprecated calls, etc (#2298)
* common libraries code cleanup - replace deprecated calls, etc

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

* common libraries code cleanup - replace deprecated calls, etc

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>

---------

Signed-off-by: Henry Avetisyan <hga@yahooinc.com>
Co-authored-by: Henry Avetisyan <hga@yahooinc.com>